--- a/template/tuya/index.html
+++ b/template/tuya/index.html
@@ -12,6 +12,18 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
+    <div class="audio-section">
+        <section class="u-audio  wcomp_mainaudio" data-wb_drag="{&quot;refid&quot;:&quot;#btn_audio2&quot;}" data-wb_set_audio="{&quot;refid&quot;:&quot;#btn_audio2&quot;,&quot;audioid&quot;:50}" data-wbi="" data-ws_src="../../imgs/tuya/music.mp4" data-wsm_audio="" id="mainaudio" style="z-index: 1000">
+                        
+        <p class="btn_audio" id="coffee_flow">
+                            
+        <strong class="txt_audio z-hide " id="txt_controller">关闭</strong> <span class="css_sprite01 audio_open" id="btn_audio2"></span>
+                        
+        </p>
+                    
+        </section>
+                    <!-- <audio src="common/1.mp3" autoplay loop>浏览器版本太低，无法播放</audio> -->
+    </div>
 	<div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-1">
@@ -66,19 +78,19 @@
                 </div>
                 <div class="content-txt">
                     <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-6">去探寻奇妙的梦境</p>
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say animated duration-1 delay-1"><div class="ka"></div></div>
-                <div class="bb-1 animated duration-2 delay-1"></div>
-                <div class="bb-2 animated duration-2 delay-1"></div>
-                <div class="bb-3 animated duration-2 delay-1"></div>
-                <div class="bb-4 animated duration-2 delay-1"></div>
-                <div class="bb-5 animated duration-2 delay-1"></div>
-                <div class="bb-6 animated duration-2 delay-1"></div>
-                <div class="bb-7 animated duration-2 delay-1"></div>
-                <div class="bb-8 animated duration-2 delay-1"></div>
+                <div class="bb-1 animated duration-4 delay-1"></div>
+                <div class="bb-2 animated duration-4 delay-1"></div>
+                <div class="bb-3 animated duration-4 delay-1"></div>
+                <div class="bb-4 animated duration-4 delay-1"></div>
+                <div class="bb-5 animated duration-4 delay-1"></div>
+                <div class="bb-6 animated duration-4 delay-1"></div>
+                <div class="bb-7 animated duration-4 delay-1"></div>
+                <div class="bb-8 animated duration-4 delay-1"></div>
             </div>
             <div class="swiper-slide swiper-4">
                 <div class="img-wrap animated duration-2">
@@ -86,8 +98,8 @@
                 </div>
                 <div class="content-txt">
                     <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-6">去探寻奇妙的梦境</p>
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="light-wrap animated duration-2 infinite delay-2">
@@ -112,7 +124,7 @@
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say-c animated duration-1">
-                    <div class="say animated duration-1  delay-1"><div class="ha"></div></div>
+                    <div class="say animated duration-1  delay-1 infinite"><div class="ha"></div></div>
                 </div>
                 <div class="bb-1 animated duration-4 delay-2"></div>
                 <div class="bb-2 animated duration-4 delay-2"></div>
@@ -139,8 +151,8 @@
                         <div class="b-6"></div>
                         <div class="b-7"></div>
                     </div>
-                    <div class="t-by"></div>
-                    <div class="t-tip">手指擦擦，为图象涂上颜色</div>
+                    <div class="t-by animated fadeIn delay-3"></div>
+                    <div class="t-tip animated fadeIn delay-3">手指擦擦，为图象涂上颜色</div>
                 </div>
                 <div class="img-wrap">
                     <div class="img-1" style="background-image: url(../../imgs/tuya/photo/8.png);"></div>
@@ -150,6 +162,16 @@
                 <div class="sheep-wrap">
                     <div class="sheep"></div>
                     <div class="gl"></div>
+                </div>
+                <div class="bubbles2">
+                    <div class="bb-1 animated zoomIn delay-2 duration-2"></div>
+                    <div class="bb-2 animated zoomIn delay-2 duration-2"></div>
+                    <div class="bb-3 animated zoomIn delay-2 duration-2"></div>
+                </div>
+                <div class="bubbles3">
+                    <div class="bb-4 animated zoomIn delay-2 duration-2"></div>
+                    <div class="bb-5 animated zoomIn delay-2 duration-2"></div>
+                    <div class="bb-6 animated zoomIn delay-2 duration-2"></div>
                 </div>
                 <div class="swiper-container-2-wrap">
                     <div class="swiper-container swiper-container-2">
@@ -164,10 +186,6 @@
         </div>
     </div>
 </div>
-
-<script src="../../lib/eraser/zepto.min.js"></script>
-<script src="../../lib/swiper/js/swiper.js"></script>
-<script src="../../lib/eraser/jquery.eraser.js"></script>
-<script src="../../src/tuya/index.js"></script>
+<script data-main="../../src/tuya/main" src="../../lib/requirejs/require.js"></script>
 </body>
 </html>
