--- a/src/tuya/style.less
+++ b/src/tuya/style.less
@@ -2,6 +2,7 @@
 @import '../../common/func.less';
 @import '../../common/ani.less';
 @import '../../common/common.less';
+@import '../../common/shower.less';
 
 @import '1.less';
 @import '2.less';
