--- a/template/youth/index.html
+++ b/template/youth/index.html
@@ -140,7 +140,6 @@
     </div>
 </div>
 
-<script src="../../lib/requirejs/require.js"></script>
-<script src="../../src/youth/main.js"></script>
+<script data-main="../../src/youth/main" src="../../lib/requirejs/require.js"></script>
 </body>
 </html>
