--- a/src/gf/2.less
+++ b/src/gf/2.less
@@ -6,15 +6,28 @@
 
 .swiper-2{
 
+	.content-txt{
+		text-align: center;
+		top: 883px;
+		left: 385px;
+	}
+
 	.tail{
 		.bg-contain();
 		.bgImg('tail.png', 2);
 		.ab(91px, 176px, 551px, 647px);
 	}
 
-	.content-txt{
-		text-align: center;
-		top: 883px;
-		left: 385px;
+	.txt-wrap{
+		.bg-contain();
+		.bgImg('txt-wrap.png', 1);
+		.ab(392px, 221px);
+		top: 796px;
+		left: auto;
+		right: 0;
+
 	}
+
+	
+
 }
