--- a/template/gf/1.html
+++ b/template/gf/1.html
@@ -17,21 +17,24 @@
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-1">
                 <div class="img-wrap">
-                    <div class="img-per animated duration-2"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
-                    <div class="img-per animated duration-2"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
-                    <div class="img-per animated duration-2"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
+                    <div class="img-per animated duration-2 delay-5"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
+                    <div class="img-per animated duration-2 delay-5"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
+                    <div class="img-per animated duration-2 delay-5"><div class="img-c" style="background-image: url(../../imgs/gf/1.png)"></div></div>
                 </div>
                 <div class="content-over">
                     <div class="bg-l-t"></div>
                     <div class="face"></div>
-                    <div class="star animated rotate-x duration-6 infinite star1"></div>
-                    <div class="star animated rotate-x duration-6 infinite star2"></div>
-                    <div class="star animated rotate-x duration-6 infinite star3"></div>
+                    <div class="txt-wrap animated flyInRight"></div>
+                    <div class="star-wrap animated fadeIn delay-4">
+                        <div class="star star1 animated rotate-x duration-6 infinite"></div>
+                        <div class="star star2 animated rotate-x duration-6 infinite"></div>
+                        <div class="star star3 animated rotate-x duration-6 infinite"></div>
+                    </div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn">Hey女孩！</p>
-                    <p class="animated fadeIn delay-1">相互碰撞叮叮当当</p>
-                    <p class="animated fadeIn delay-2">在彼此的生活中闪耀</p>
+                    <p class="animated fadeIn delay-1">Hey女孩！</p>
+                    <p class="animated fadeIn delay-2">仍记得初见时你的笑脸</p>
+                    <p class="animated fadeIn delay-3">一晃已经多年</p>
                 </div>
             </div>
         </div>
