--- a/template/gf/2.html
+++ b/template/gf/2.html
@@ -18,7 +18,7 @@
                 <div class="img-c" style="background-image: url(../../imgs/gf/2.png)"></div>
                 <div class="content-over">
                     <div class="face"></div>
-                    <div class="tail"></div>
+                    <div class="txt-wrap"></div>
                 </div>
                 <div class="content-txt">
                     <p class="animated fadeIn">青涩的时光里相互依靠</p>
