--- a/src/gf/c.less
+++ b/src/gf/c.less
@@ -49,7 +49,8 @@ body{
 .content-txt{
 	color: #fff;
 	text-align: left;
-	line-height: 1.5;
+	line-height: 1.2;
+	font-size: 20px;
 	position: absolute;
 	z-index: 2000;
 }
