--- a/src/gf/c.less
+++ b/src/gf/c.less
@@ -55,6 +55,16 @@ body{
 	z-index: 2000;
 }
 
+.txt-wrap{
+	.bg-contain();
+	.bgImg('txt-wrap.png', 1);
+	.ab(392px, 221px);
+	top: 796px;
+	left: auto;
+	right: 0;
+
+}
+
 .face{
 	.bg-contain();
 	.bgImgRoot('face.png');
