--- a/template/gf/2.html
+++ b/template/gf/2.html
@@ -15,7 +15,9 @@
     <div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-2">
-                <div class="img-c" style="background-image: url(../../imgs/gf/2.png)"></div>
+                <div class="img-wrap">
+                    <div class="img-c" style="background-image: url(../../imgs/gf/2.png)"></div>
+                </div>
                 <div class="content-over">
                     <div class="face"></div>
                     <div class="txt-wrap"></div>
