--- a/template/gf/2.html
+++ b/template/gf/2.html
@@ -23,9 +23,9 @@
                     <div class="txt-wrap"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn">青涩的时光里相互依靠</p>
-                    <p class="animated fadeIn">给你一颗糖</p>
-                    <p class="animated fadeIn">你是我的宝</p>
+                    <p>青涩的时光里相互依靠</p>
+                    <p>给你一颗糖</p>
+                    <p>你是我的宝</p>
                 </div>
             </div>
         </div>
