--- a/template/gf/2.html
+++ b/template/gf/2.html
@@ -15,14 +15,24 @@
     <div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-2">
-                <div class="img-wrap">
+                <div class="img-wrap animated fadeIn delay-2 duration-4">
                     <div class="img-c" style="background-image: url(../../imgs/gf/2.png)"></div>
                 </div>
                 <div class="content-over">
                     <div class="face"></div>
-                    <div class="txt-wrap"></div>
+                    <div class="txt-wrap animated flyInRight"></div>
+                    <div class="bubbles bubbles1 animated duration-4 delay-4">
+                        <div class="bb1 animated duration-4 delay-4"></div>
+                        <div class="bb2 animated duration-4 delay-4"></div>
+                        <div class="bb3 animated duration-4 delay-4"></div>
+                    </div>
+                    <div class="bubbles bubbles2 animated duration-4 delay-4">
+                        <div class="bb1"></div>
+                        <div class="bb2"></div>
+                        <div class="bb3"></div>
+                    </div>
                 </div>
-                <div class="content-txt">
+                <div class="content-txt animated fadeIn delay-1">
                     <p>青涩的时光里相互依靠</p>
                     <p>给你一颗糖</p>
                     <p>你是我的宝</p>
